--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "sass-loader": "^8.0.0",
         "vue": "^2.6.11",
         "vue-router": "^3.3.4",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.5.1"
     },
     "dependencies": []
 }
